--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,17 @@ hs_err_pid*
 
 # Mac
 .DS_Store
+
+# Gradle
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
