--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ fabric.properties
 
 # Log file
 *.log
+*.hprof
 
 # BlueJ files
 *.ctxt
@@ -101,6 +102,7 @@ hs_err_pid*
 .gradle
 **/build/
 !src/**/build/
+local.properties
 
 # Ignore Gradle GUI config
 gradle-app.setting
