--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ kotlin.code.style=official
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.stability.nowarn=true
 android.useAndroidX=true
-
+# Dependency versions
 kotlin.version=1.6.10
 agp.version=4.2.2
-compose.version=1.1.0
+compose.version=1.1.1
