--- a/apps/common/src/androidMain/AndroidManifest.xml
+++ b/apps/common/src/androidMain/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.kiliansteenman.kemulator.common"/>
+<manifest package="com.kiliansteenman.kemulation.common" />
