Update kotlin and compose versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.stability.nowarn=true
 android.useAndroidX=true
 # Dependency versions
-kotlin.version=1.6.10
+kotlin.version=1.6.21
 agp.version=4.2.2
-compose.version=1.1.1
+compose.version=1.2.0-alpha01-dev725
