--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,25 @@
+#Gradle
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+
+#Kotlin
 kotlin.code.style=official
-kotlin.native.enableDependencyPropagation=false
+
+#MPP
 kotlin.mpp.stability.nowarn=true
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+
+#Compose
+org.jetbrains.compose.experimental.uikit.enabled=true
+kotlin.native.cacheKind=none
+
+#Android
 android.useAndroidX=true
-# Dependency versions
-kotlin.version=1.6.21
-agp.version=4.2.2
-compose.version=1.2.0-alpha01-dev725
+android.compileSdk=33
+android.targetSdk=33
+android.minSdk=24
+
+#Versions
+kotlin.version=1.8.20
+agp.version=7.4.2
+compose.version=1.4.0
