--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,17 @@
 [versions]
+activityCompose = "1.9.0"
+appcompat = "1.6.1"
+coreKtx = "1.13.1"
 kotlin = "1.9.24"
-androidGradlePlugin = "8.3.0"
+androidGradlePlugin = "8.3.2"
 composePlugin = "1.6.10"
+kotlinxCoroutinesCore = "1.8.1"
 
 [libraries]
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 
 [plugins]
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
