--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 activityCompose = "1.9.0"
 appcompat = "1.6.1"
 coreKtx = "1.13.1"
-kotlin = "1.9.24"
+kotlin = "2.0.0"
 androidGradlePlugin = "8.3.2"
 composePlugin = "1.6.10"
 kotlinxCoroutinesCore = "1.8.1"
@@ -18,6 +18,6 @@ jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "composePlugin
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-#compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "composePlugin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
